Full project Spring Boot + Spring Data + Spring MVC + Spring Security Fixed Repository + renamed main file LearnJavaApplication.java

--- a/src/main/resources/db/changelog/changeset/update-students-table.yml
+++ b/src/main/resources/db/changelog/changeset/update-students-table.yml
@@ -15,6 +15,6 @@ databaseChangeLog:
                   value: 'Протасевич'
               - column:
                   name: grade
-                  value: 10
+                  value: '10'
             where:
               id=1
